Settings WebUI: show fallback tooltip text when extension name is not available from the preference

Bug: 819123
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I35712fb750e941ff14801c41441289b2591911dd
Reviewed-on: https://chromium-review.googlesource.com/951898
Reviewed-by: Scott Chen <scottchen@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541217}
Former-commit-id: 8a7e4e1d1e06ef41632a05c588c593d8cc6ce3d7