chrome/browser/ui/webui/policy_indicator_localized_strings_provider.cc
@@ -10,21 +10,29 @@
 
 namespace policy_indicator {
 
+struct LocalizedString {
+  const char* name;
+  int id;
+};
+
 void AddLocalizedStrings(content::WebUIDataSource* html_source) {
-  html_source->AddLocalizedString("controlledSettingPolicy",
-                                  IDS_CONTROLLED_SETTING_POLICY);
-  html_source->AddLocalizedString("controlledSettingRecommendedMatches",
-                                  IDS_CONTROLLED_SETTING_RECOMMENDED);
-  html_source->AddLocalizedString("controlledSettingRecommendedDiffers",
-                                  IDS_CONTROLLED_SETTING_HAS_RECOMMENDATION);
-  html_source->AddLocalizedString("controlledSettingExtension",
-                                  IDS_CONTROLLED_SETTING_EXTENSION);
+  LocalizedString localized_strings[] = {
+    {"controlledSettingPolicy", IDS_CONTROLLED_SETTING_POLICY},
+    {"controlledSettingRecommendedMatches", IDS_CONTROLLED_SETTING_RECOMMENDED},
+    {"controlledSettingRecommendedDiffers",
+     IDS_CONTROLLED_SETTING_HAS_RECOMMENDATION},
+    {"controlledSettingExtension", IDS_CONTROLLED_SETTING_EXTENSION},
+    {"controlledSettingExtensionWithoutName",
+     IDS_CONTROLLED_SETTING_EXTENSION_WITHOUT_NAME},
 #if defined(OS_CHROMEOS)
-  html_source->AddLocalizedString("controlledSettingShared",
-                                  IDS_CONTROLLED_SETTING_SHARED);
-  html_source->AddLocalizedString("controlledSettingOwner",
-                                  IDS_CONTROLLED_SETTING_OWNER);
+    {"controlledSettingShared", IDS_CONTROLLED_SETTING_SHARED},
+    {"controlledSettingOwner", IDS_CONTROLLED_SETTING_OWNER},
 #endif
+  };
+
+  for (size_t i = 0; i < arraysize(localized_strings); i++)
+    html_source->AddLocalizedString(localized_strings[i].name,
+                                    localized_strings[i].id);
 }
 
 }  // namespace policy_indicator
