ui/webui/resources/cr_elements/policy/cr_policy_indicator_behavior.js
@@ -13,6 +13,7 @@
  * Chrome OS only strings may be undefined.
  * @type {{
  *   controlledSettingExtension: string,
+ *   controlledSettingExtensionWithoutName: string,
  *   controlledSettingPolicy: string,
  *   controlledSettingRecommendedMatches: string,
  *   controlledSettingRecommendedDiffers: string,
@@ -120,7 +121,9 @@ var CrPolicyIndicatorBehavior = {
       return '';  // Tooltips may not be defined, e.g. in OOBE.
     switch (type) {
       case CrPolicyIndicatorType.EXTENSION:
-        return CrPolicyStrings.controlledSettingExtension.replace('$1', name);
+        return name.length > 0 ?
+            CrPolicyStrings.controlledSettingExtension.replace('$1', name) :
+            CrPolicyStrings.controlledSettingExtensionWithoutName;
       case CrPolicyIndicatorType.PRIMARY_USER:
         return CrPolicyStrings.controlledSettingShared.replace('$1', name);
       case CrPolicyIndicatorType.OWNER:
