chrome/test/data/webui/cr_elements/cr_policy_strings.js
@@ -11,4 +11,5 @@ var CrPolicyStrings = CrPolicyStrings || {
   controlledSettingShared: 'shared: $1',
   controlledSettingOwner: 'owner: $1',
   controlledSettingExtension: 'extension: $1',
+  controlledSettingExtensionWithoutName: 'extension',
 };
